@startuml

title __CLIENT's Class Diagram__\n

  package com.epam.training {
    package com.epam.training.client {
      class BasicClient {
          ~ BasicClient()
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.client {
      abstract class Client {
          - clientId : Long
          - name : String
          - email : String
          - phoneNumber : Long
          - orders : List<Order>
          - favoriteStocks : List<Stock>
          + Client()
          + getClientId()
          + getName()
          + getEmail()
          + getPhoneNumber()
          + getOrders()
          + getFavoriteStocks()
          + getSex()
          + getEthnicity()
          + setEmail()
          + setPhoneNumber()
          + setOrders()
          + setFavoriteStocks()
          + setSex()
          + setEthnicity()
          + equals()
          + hashCode()
          # canEqual()
          + toString()
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.client {
      enum Ethnicity {
        European
        Asian
        African
        Indian
        Oceanian
        American
        Mixed
        Unknown
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.client {
      enum Sex {
        Male
        Female
        Unknown
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.client {
      class VipClient {
          ~ VipClient()
      }
    }
  }
  

  BasicClient -up-|> Client
  Client o-- Sex : sex
  Client o-- Ethnicity : ethnicity
  VipClient -up-|> Client


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
